# store_api

./: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
store/: main.py  routers.py
store/controllers/: product.py
store/core/: config.py  exceptions.py
store/db/: mongo.py
store/models/: base.py  product.py
store/schemas/: base.py  product.py
store/usecases/: product.py
tests/: conftest.py  factories.py
tests/controllers/: test_product.py
tests/schemas/: test_product.py
tests/usecases/: test_product.py
